2012-12-04  Sergio Martin <sergio.martin@artica.es>

	* pandoradb.sql
	pandoradb.postgreSQL.sql
	pandoradb.oracle.sql
	extras/pandoradb_migrate_4.0.x_to_5.0.mysql.sql
	extras/pandoradb_migrate_4.0.x_to_5.0.oracle.sql
	extras/pandoradb_migrate_4.0.x_to_5.0.postgreSQL.sql
	godmode/alerts/configure_alert_template.php: Add wizard_level flag to the
	alert templates table

2012-12-04 Miguel de Dios <miguel.dedios@artica.es>
	
	* godmode/reporting/reporting_builder.php,
	godmode/reporting/map_builder.php,
	godmode/reporting/visual_console_builder.php,
	godmode/reporting/visual_console_builder.data.php,
	include/functions_visual_map_editor.php,
	operation/reporting/reporting_xml.php,
	operation/agentes/exportdata.excel.php,
	operation/agentes/ver_agente.php,
	operation/agentes/status_monitor.php,
	operation/agentes/alerts_status.php,
	operation/agentes/exportdata.csv.php: uploaded the changes of source
	code style previous to my next commit for to make the next commit
	more easy.

2012-12-03  Ramon Novoa  <rnovoa@artica.es>

	* include/functions_treeview.php: Fixed id decoding under the
	  metaconsole.

2012-12-03 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* pandoradb_data.sql
	 pandoradb.data.postgreSQL.sql
	 pandoradb.data.oracle.sql: Added meta_num_elements token in tconfig
	 to support metaconsole views with a lot of elements.

2012-12-03 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* include/functions_reporting.php: Added agent statistics for 
	batch statistic branch in function reporting_get_group_stats. 
	 operation/agentes/status_monitor.php: Cleaned code.

2012-12-03  Ramon Novoa  <rnovoa@artica.es>

	* operation/tree.php: Fixed the icon of the last element of a sub-tree.

2012-12-03  Ramon Novoa  <rnovoa@artica.es>

	* include/functions_treeview.php: Fixed a typo.

2012-12-03  Sergio Martin <sergio.martin@artica.es>

	* godmode/agentes/configurar_agente.php: Fixed macros update of
	plugin components for bug #3591104
