@@ -1,5 +1,11 @@
 2012-12-04  Sergio Martin <sergio.martin@artica.es>
 
+	* extensions/dbmanager.php
+	godmode/servers/recon_script.php: Comment missed check_referer 
+	calls to disable it by the moment
+
+2012-12-04  Sergio Martin <sergio.martin@artica.es>
+
 	* pandoradb.sql
 	pandoradb.postgreSQL.sql
 	pandoradb.oracle.sql
